<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Animal Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="progress_dialog_title">Loading</string>
    <string name="progress_dialog_details">Fetching Data</string>
    <string name="dummy_text">ROFL-copters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list_message_text">There are no Animals =(</string>
    <string name="details_view_name">NAME:</string>
    <string name="details_view_dateAdd">DATE\nADDED:</string>
    <string name="details_view_primColor">PRIMARY\nCOLOR:</string>
    <string name="details_view_secColor">SECONDARY\nCOLOR:</string>
    <string name="details_view_sex">SEX:</string>
    <string name="details_view_age">AGE:</string>
    <string name="details_view_breed">BREED:</string>
    <string name="title_activity_details">Details</string>
    <string name="no_connection_notice">No Internet Connection Available</string>
    <string name="noconnection_try_again">Try Again</string>
    <string name="actionBarMenu_refresh">Refresh</string>
    <string name="details_view_secBreed">SECONDARY\nBREED:</string>
    <string name="details_title_AdoptionInfo">ADOPTION INFORMATION</string>
    <string name="details_view_markings">MARKINGS:</string>
    <string name="details_view_kennelNo">LOCATION:</string>

    <string name="details_message_adoptionInfo">
        If you are interested in adopting this animal,
        please print this page and come to the Shelter
        as soon as possible. If this particular pet
        already has a new home, the Shelter probably has
        another companion waiting just for you.
        For fees and other information,
        please see the link below:
    </string>
</resources>
